[package]
name = "album-card-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
tera = "*"
qobuz-player-client = { version = "*", git = "https://github.com/sofusa/qobuz-player" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
axum = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
futures = "*"

